--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ ul,
 ol {
   list-style-type: none;
 }
+img {
+  display: block;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -57,6 +60,9 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+h2 {
+  color: var(--main);
+}
 
 button {
   border-radius: 8px;
@@ -69,14 +75,6 @@ button {
   cursor: pointer;
   /* transition: border-color 0.25s; */
   transition: background-color 0.25s;
-}
-button:hover {
-  /* border-color: #646cff; */
-  /* background-color: #d84343; */
-}
-button:focus,
-button:focus-visible {
-  /* outline: 4px auto -webkit-focus-ring-color; */
 }
 
 @media (prefers-color-scheme: light) {
