--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,15 @@
+.page {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.page p {
+  /* border: solid 1px red; */
+  border-radius: 10px;
+  background-color: var(--rating);
+  font-weight: 600;
+  padding: 10px 20px;
+}
 .list {
   display: flex;
   flex-direction: column;
