--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -56,10 +56,11 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  font-weight: 600;
   font-size: 24px;
-  font-weight: 500;
-  line-height: 30px;
-  color: #101828;
+  /* line-height: 30px; */
+  line-height: 125%;
+  color: var(--main);
 }
 
 .camperCard h2 {
@@ -183,18 +184,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  white-space: nowrap;
   padding: 16px 40px;
   width: 166px;
   height: 56px;
   background: var(--button);
   border-radius: 200px;
-
   color: #ffffff;
-  /* font-family: Inter; */
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  /* white-space: nowrap; */
 }
 .cardBtn:hover,
 .cardBtn:focus {
