--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-weight: bold;
 }
 h2 {
   color: var(--main);
@@ -71,9 +72,9 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  /* background-color: var(--button); */
+
   cursor: pointer;
-  /* transition: border-color 0.25s; */
+  transition: border-color 0.25s;
   transition: background-color 0.25s;
 }
 
