--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -32,9 +32,10 @@
 }
 
 .containerImg > img {
-  object-fit: cover;
+  object-fit: contain;
+  /* object-fit: cover; */
   height: 100%;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .cardContent {
